--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,6 @@
+    }
+}
+
 plugins {
     id 'com.android.application'
 }
@@ -25,4 +28,5 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
